# cr-engine

./: .gitignore  AGENTS.md  README.md  environment.yaml  pyproject.toml
clash_royale_engine/: __init__.py
clash_royale_engine/core/: __init__.py  arena.py  engine.py  recorder.py  scheduler.py  state.py
clash_royale_engine/entities/: __init__.py  base_entity.py
clash_royale_engine/entities/buildings/: __init__.py  king_tower.py  princess_tower.py
clash_royale_engine/entities/spells/: __init__.py  arrows.py  fireball.py
clash_royale_engine/entities/troops/: __init__.py  archers.py  giant.py  knight.py  mini_pekka.py  musketeer.py  skeletons.py
clash_royale_engine/env/: gymnasium_env.py  multi_agent_env.py
clash_royale_engine/models/: __init__.py  cnn_lstm_policy.py  recurrent_ppo.py  recurrent_rollout_buffer.py
clash_royale_engine/players/: __init__.py  player.py  player_interface.py
clash_royale_engine/systems/: __init__.py  combat.py  elixir.py  pathfinding.py  physics.py  targeting.py
clash_royale_engine/utils/: __init__.py  constants.py  converters.py  validators.py
clash_royale_engine/visualization/: __init__.py  renderer.py
examples/: 01_headless_quickstart.py  02_gymnasium_random_agent.py  03_recording_and_il.py  04_manual_placement.py  05_pocket_placement.py  06_state_inspection.py  demo_gui.py  train_ppo_baseline.py  train_ppo_cnn_lstm.py  watch_ppo_agent.py
runs/ppo_baseline_1771647701/: eval_summary.txt
runs/ppo_baseline_1771647701/PPO_1/: events.out.tfevents.1771647703.DESKTOP-UALL4NF.6040.0
runs/ppo_baseline_1771651478/: eval_summary.txt
runs/ppo_baseline_1771651478/PPO_1/: events.out.tfevents.1771651480.DESKTOP-UALL4NF.19256.0
runs/ppo_cnn_lstm_1771681989/: eval_summary.txt
runs/ppo_cnn_lstm_1771681989/PPO_CNN_LSTM_1/: events.out.tfevents.1771681992.DESKTOP-UALL4NF.19476.0
tests/: test_cnn_lstm.py  test_engine.py
